--- a/index.html
+++ b/index.html
@@ -2,17 +2,43 @@
 <html>
 <head>
     <title>CV - Home</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+
+        .nav {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+        }
+
+        .nav a {
+            color: white;
+            text-decoration: none;
+            margin-right: 10px;
+        }
+
+        .content {
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My CV</h1>
-    <nav>
-        <a href="education.html">Education</a> |
+    <div class="nav">
+        <a href="index.html">Home</a>
+        <a href="education.html">Education</a>
         <a href="experience.html">Experience</a>
-        <!-- Add links to other sections here -->
-    </nav>
-    <h2>About Me</h2>
-    <p>
-        <!-- Add your about me text here -->
-    </p>
+    </div>
+    <div class="content">
+        <h1>Welcome to My CV</h1>
+        <h2>About Me</h2>
+        <p>
+            <!-- Add your about me text here -->
+        </p>
+    </div>
 </body>
 </html>
