--- a/experience.html
+++ b/experience.html
@@ -2,18 +2,43 @@
 <html>
 <head>
     <title>CV - Experience</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+
+        .nav {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+        }
+
+        .nav a {
+            color: white;
+            text-decoration: none;
+            margin-right: 10px;
+        }
+
+        .content {
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Experience</h1>
-    <nav>
-        <a href="index.html">Home</a> |
+    <div class="nav">
+        <a href="index.html">Home</a>
         <a href="education.html">Education</a>
-        <!-- Add links to other sections here -->
-    </nav>
-    <h2>My Work Experience</h2>
-    <ul>
-        <!-- Add your experience details here. Example: -->
-        <li>Software Developer at ABC Corp.</li>
-    </ul>
+        <a href="experience.html">Experience</a>
+    </div>
+    <div class="content">
+        <h1>Experience</h1>
+        <ul>
+            <!-- Add your experience details here. Example: -->
+            <li>Software Developer at ABC Corp.</li>
+        </ul>
+    </div>
 </body>
 </html>
