--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CV - Home</title>
+    <title>CV - Vispi Karkaria</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,10 +34,18 @@
         <a href="experience.html">Experience</a>
     </div>
     <div class="content">
-        <h1>Welcome to My CV</h1>
+        <h1>Welcome to Vispi Karkaria's CV</h1>
         <h2>About Me</h2>
         <p>
-            <!-- Add your about me text here -->
+            <strong>Name:</strong> Vispi Karkaria<br>
+            <strong>Address:</strong> 2145 Sheridan Rd, Mechanical Eng., B224, Evanston, IL 60208<br>
+            <strong>Mobile:</strong> +1 (773) 807-0893<br>
+            <strong>Email:</strong> vispikarkaria2026@u.northwestern.edu<br>
+            <strong>Education:</strong> Ph.D. in Mechanical Engineering from Northwestern University, B.Tech. in Mechanical Engineering from College of Engineering, Pune and Diploma in Engineering from Cusrow Wadia Institute of Technology<br>
+            <strong>Projects:</strong> Development of a Predictive Algorithm for Tire Lifespan Using Random Forest Model, Created LSTM Model for Additive Manufacturing, and Created Latent-Variable Constrained Bayesian Optimization (LV-CBO)<br>
+            <strong>Publications & Conference Papers:</strong> Published various papers in Structural and Multidisciplinary Optimization, Journal of Energy Storage, Turkish Journal of Computer and Mathematics Education (TURCOMAT), and presented numerous conference papers.<br>
+            <strong>Patent Applications:</strong> 5 Patent Applications, including 'Economic test set up for EV motor testing using innovative coupling' and 'Modified hot water supply system for water and energy saving'<br>
+            <strong>Internship:</strong> Tata Research Development and Design Center, Pune (August 2020 - August 2021)
         </p>
     </div>
 </body>
