--- a/index.html
+++ b/index.html
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CV - Vispi Karkaria</title>
+    <title>CV - Home</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #fafafa;
+            color: #333;
         }
 
         .nav {
-            background-color: #333;
+            background-color: #1d1d1d;
             color: white;
-            padding: 10px;
+            padding: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 1.2em;
         }
 
         .nav a {
             color: white;
             text-decoration: none;
-            margin-right: 10px;
+            padding: 10px 20px;
+            transition: background 0.3s;
+        }
+
+        .nav a:hover {
+            background: #333;
+            border-radius: 5px;
         }
 
         .content {
-            padding: 20px;
+            padding: 50px;
+            font-size: 1.1em;
+            line-height: 1.6;
+            max-width: 1000px;
+            margin: auto;
         }
+
+        .content h1, .content h2 {
+            color: #333;
+        }
+
+        .content h1 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+        }
+
+        .content h2 {
+            font-size: 1.5em;
+            margin-top: 1em;
+            margin-bottom: 0.5em;
+        }
+
+        .content p {
+            color: #555;
+        }
+
     </style>
 </head>
 <body>
@@ -34,18 +69,10 @@
         <a href="experience.html">Experience</a>
     </div>
     <div class="content">
-        <h1>Welcome to Vispi Karkaria's CV</h1>
+        <h1>Welcome to My CV</h1>
         <h2>About Me</h2>
         <p>
-            <strong>Name:</strong> Vispi Karkaria<br>
-            <strong>Address:</strong> 2145 Sheridan Rd, Mechanical Eng., B224, Evanston, IL 60208<br>
-            <strong>Mobile:</strong> +1 (773) 807-0893<br>
-            <strong>Email:</strong> vispikarkaria2026@u.northwestern.edu<br>
-            <strong>Education:</strong> Ph.D. in Mechanical Engineering from Northwestern University, B.Tech. in Mechanical Engineering from College of Engineering, Pune and Diploma in Engineering from Cusrow Wadia Institute of Technology<br>
-            <strong>Projects:</strong> Development of a Predictive Algorithm for Tire Lifespan Using Random Forest Model, Created LSTM Model for Additive Manufacturing, and Created Latent-Variable Constrained Bayesian Optimization (LV-CBO)<br>
-            <strong>Publications & Conference Papers:</strong> Published various papers in Structural and Multidisciplinary Optimization, Journal of Energy Storage, Turkish Journal of Computer and Mathematics Education (TURCOMAT), and presented numerous conference papers.<br>
-            <strong>Patent Applications:</strong> 5 Patent Applications, including 'Economic test set up for EV motor testing using innovative coupling' and 'Modified hot water supply system for water and energy saving'<br>
-            <strong>Internship:</strong> Tata Research Development and Design Center, Pune (August 2020 - August 2021)
+            <!-- Add your about me text here -->
         </p>
     </div>
 </body>
