--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             color: #555;
         }
 
+        .profile-image {
+            max-width: 200px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -69,6 +74,7 @@
         <a href="experience.html">Experience</a>
     </div>
     <div class="content">
+        <img class="profile-image" src="path-to-your-photo.jpg" alt="Your Name">
         <h1>Welcome to My CV</h1>
         <h2>About Me</h2>
         <p>
