--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <a href="experience.html">Experience</a>
     </div>
     <div class="content">
-        <img class="profile-image" src="Personal_Photo.jpg" alt="Your Name">
+        <img class="profile-image" src="Personal_Photo.jpeg" alt="Your Name">
         <h1>Welcome to My CV</h1>
         <h2>About Me</h2>
         <p>
