--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
         <h1>Welcome to My CV</h1>
         <h2>About Me</h2>
         <p>
-            <!-- Add your about me text here -->
+
+
+        As a Ph.D. student at Northwestern University, my focus is centered on the development and implementation of machine learning algorithms for Digital Twins. I'm deeply immersed in projects encompassing various fields such as time-series analysis, language models, deep learning, uncertainty quantification, and optimization. My proficiency lies in creating machine learning models specifically designed for time-series analysis and building optimization algorithms for real-time decision making.
+        
+        My research is predominantly oriented toward the creation and utilization of these algorithms to construct digital twin systems. The concept of a digital twin refers to the creation of a digital replica of a physical system. This virtual model is capable of learning from its real-life counterpart in real time, facilitating instantaneous decision making by providing actionable feedback to the physical system. The harmony between the physical and digital systems encapsulates the innovative and dynamic nature of my research.
         </p>
     </div>
 </body>
