--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="content">
         <img class="profile-image" src="Personal_Photo.jpeg" alt="Your Name">
-        <h1>Welcome to My CV</h1>
+        <h1>Vispi Nevile Karkaria</h1>
         <h2>About Me</h2>
         <p>
 
