--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background-size: cover;
             height: 100%;
             text-align: center;
-            color: white;
+            color: black;
         }
         
         .masthead h1 {
