--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <header class="masthead">
         <div class="container d-flex h-100 align-items-center" id="header-container">
             <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-white">Vispi Nevile Karkaria</h1>
+                <h1 class="mx-auto my-0 text-black">Vispi Nevile Karkaria</h1>
                 <h2 class="text-light mx-auto mt-4 mb-4">Machine Learning, Digital Twins, Time-Series Analysis, Optimization</h2>
                 <a class="btn btn-link js-scroll-trigger" href="#about"><i class="fa fa-angle-down"></i></a>
             </div>
