--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         
         .masthead {
-            background: url('white-technology-background_23-2148403819.avif') no-repeat center center;
+            background: url('website_background.jpg') no-repeat center center;
             background-size: cover;
             height: 100%;
             text-align: center;
