--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
         .navbar-nav .nav-item .nav-link:hover {
             color: rgba(0,0,0,.5);
         }
+        .footer {
+            width: 100%;
+            text-align: center;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            background-color: #f8f9fa; /* change as per your preference */
+            padding: 1rem 0;
+        }
+
+        .footer a {
+            color: grey;
+            margin: 0 1rem;
+        }
     </style>
 </head>
 <body>
@@ -131,6 +145,11 @@
         </div>
     </div>
     </section>
+        <footer class="footer">
+        <a href="https://scholar.google.com/citations?user=6ZxujUkAAAAJ&hl=en" target="_blank"><i class="fab fa-google"></i></a>
+        <a href="https://www.linkedin.com/in/vispi-karkaria" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:vispikarkaria127@gmail.com"><i class="fas fa-envelope"></i></a>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
