--- a/index.html
+++ b/index.html
@@ -145,6 +145,30 @@
         </div>
     </div>
     </section>
+    <section id="education" class="about-section text-center">
+    <div class="container">
+        <h2 class="mb-4">Education</h2>
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <div class="edu-item mb-4">
+                    <h3 class="mb-1">Ph.D., Mechanical Engineering</h3>
+                    <h4 class="mb-2">Northwestern University (NU), 2021 - Present</h4>
+                    <p>Advisor: Prof. Wei Chen (Mechanical Eng.), GPA: 3.88/4</p>
+                </div>
+                <div class="edu-item mb-4">
+                    <h3 class="mb-1">B.Tech., Mechanical Engineering</h3>
+                    <h4 class="mb-2">College of Engineering, Pune (CoEP), 2018 - 2021</h4>
+                    <p>Thesis: Digital Twin Manufacturing of Composite Material</p>
+                </div>
+                <div class="edu-item">
+                    <h3 class="mb-1">Diploma in Engineering, Mechanical Engineering</h3>
+                    <h4 class="mb-2">Cusrow Wadia Institute of Technology, 2015 - 2018</h4>
+                    <p>Thesis: Forward Reverse Motion Multi-Cylinder Ball Milling Machine</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
         <footer class="footer">
         <a href="https://scholar.google.com/citations?user=6ZxujUkAAAAJ&hl=en" target="_blank"><i class="fab fa-google"></i></a>
         <a href="https://www.linkedin.com/in/vispi-karkaria" target="_blank"><i class="fab fa-linkedin"></i></a>
