--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
             color: grey;
             margin: 0 1rem;
         }
+        .edu-item {
+            border-bottom: 1px solid #ccc;
+            padding: 1rem 0;
+            margin-bottom: 1rem;
+        }
+    
+        .edu-item:last-child {
+            border-bottom: none;
+        }
+    
+        .edu-item h3, .edu-item h4 {
+            margin-bottom: .5rem;
+        }
     </style>
 </head>
 <body>
@@ -150,21 +163,17 @@
         <div class="container">
             <h2 class="mb-4">Education</h2>
             <div class="row">
-                <div class="col-lg-8 mx-auto">
+                <div class="col-lg-8 mx-auto text-left">
                     <div class="edu-item mb-4">
                         <h3 class="mb-1">Ph.D., Mechanical Engineering</h3>
                         <h4 class="mb-2">Northwestern University (NU), 2021 - Present</h4>
                         <p>Advisor: Prof. Wei Chen (Mechanical Eng.), GPA: 3.88/4</p>
                     </div>
-                </div>
-                <div class="col-lg-8 mx-auto">
                     <div class="edu-item mb-4">
                         <h3 class="mb-1">B.Tech., Mechanical Engineering</h3>
                         <h4 class="mb-2">College of Engineering, Pune (CoEP), 2018 - 2021</h4>
                         <p>Thesis: Digital Twin Manufacturing of Composite Material</p>
                     </div>
-                </div>
-                <div class="col-lg-8 mx-auto">
                     <div class="edu-item">
                         <h3 class="mb-1">Diploma in Engineering, Mechanical Engineering</h3>
                         <h4 class="mb-2">Cusrow Wadia Institute of Technology, 2015 - 2018</h4>
