--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
             padding-bottom: 2rem;
             color: #fff;
         }
+
+        .masthead {
+            padding-top: 70px;
+            /* Rest of your CSS */
+        }
+
+        .navbar {
+            z-index: 1030; 
+        }
         
         .about-section {
             background-color: #222;
