--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             font-family: 'Nunito', sans-serif;
             color: #fff;
         }
-        
+        body {
+            padding-top: 70px;
+        }
         .masthead {
             background: url('stream-binary-code-design-vector_53876-161364.avif') no-repeat center center;
             background-size: cover;
