--- a/index.html
+++ b/index.html
@@ -116,15 +116,17 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark fixed-top" id="mainNav">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">HOME</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">about</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#pubs">publications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#foot">links</a></li>
                 </ul>
             </div>
         </div>
