--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         }
 
         .navbar {
+            position: fixed;
+            padding: 1rem 0;
+            color: grey;
+            margin: 0 1rem;
+            background-color: #222; /* change as per your preference */
             z-index: 1030; 
         }
         
@@ -123,10 +128,10 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">about</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#pubs">publications</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#foot">links</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#pubs">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#foot">Links</a></li>
                 </ul>
             </div>
         </div>
