--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         }
 
         .navbar {
-
+            position: fixed;
+            color: grey;
+            background-color: #222; /* change as per your preference */
             z-index: 1030; 
         }
         
