--- a/index.html
+++ b/index.html
@@ -172,22 +172,43 @@
     <section id="education" class="about-section text-center">
         <div class="container">
             <h2 class="mb-4">Education</h2>
-            <div class="row">
-                <div class="col-lg-8 mx-auto text-left">
-                    <div class="edu-item mb-4">
-                        <h3 class="mb-1">Ph.D., Mechanical Engineering</h3>
-                        <h4 class="mb-2">Northwestern University (NU), 2021 - Present</h4>
-                        <p>Advisor: Prof. Wei Chen (Mechanical Eng.), GPA: 3.88/4</p>
+            <div class="row cv-left justify-content-center text-left no-gutters" id="edu">
+                <div class="card-deck">
+                    <div class="card">
+                        <div class="card-body text-left">
+                            <h6>Northwestern University</h6>
+                            <div class="small text-white-50">
+                                Ph.D., Mechanical Engineering
+                                <br />
+                                2021 - Present
+                                <br />
+                                Advisor: Prof. Wei Chen (Mechanical Eng.), GPA: 3.88/4
+                            </div>
+                        </div>
                     </div>
-                    <div class="edu-item mb-4">
-                        <h3 class="mb-1">B.Tech., Mechanical Engineering</h3>
-                        <h4 class="mb-2">College of Engineering, Pune (CoEP), 2018 - 2021</h4>
-                        <p>Thesis: Digital Twin Manufacturing of Composite Material</p>
+                    <div class="card">
+                        <div class="card-body text-left">
+                            <h6>College of Engineering, Pune (CoEP)</h6>
+                            <div class="small text-white-50">
+                                B.Tech., Mechanical Engineering
+                                <br />
+                                2018 - 2021
+                                <br />
+                                Thesis: Digital Twin Manufacturing of Composite Material
+                            </div>
+                        </div>
                     </div>
-                    <div class="edu-item">
-                        <h3 class="mb-1">Diploma in Engineering, Mechanical Engineering</h3>
-                        <h4 class="mb-2">Cusrow Wadia Institute of Technology, 2015 - 2018</h4>
-                        <p>Thesis: Forward Reverse Motion Multi-Cylinder Ball Milling Machine</p>
+                    <div class="card">
+                        <div class="card-body text-left">
+                            <h6>Cusrow Wadia Institute of Technology</h6>
+                            <div class="small text-white-50">
+                                Diploma in Engineering, Mechanical Engineering
+                                <br />
+                                2015 - 2018
+                                <br />
+                                Thesis: Forward Reverse Motion Multi-Cylinder Ball Milling Machine
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
