--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
     </div>
     </section>
-    <section id="education" class="about-section text-center">
+    <section id="education" class="about-section text-center" style="background-color: grey;">
         <div class="container">
             <h2 class="mb-4">Education</h2>
             <div class="row cv-left justify-content-center text-left no-gutters" id="edu">
