--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
         </div>
     </div>
     </section>
-    <section id="education" class="about-section text-center" style="background-color: grey;">
+    <section id="education" class="about-section text-center" style="background-color: #222;">
         <div class="container">
             <h2 class="mb-4">Education</h2>
             <div class="row cv-left justify-content-center text-left no-gutters" id="edu">
                 <div class="card-deck">
                     <div class="card">
-                        <div class="card-body text-left">
+                        <div class="card-body text-left" style="background-color: #222;">
                             <h6>Northwestern University</h6>
                             <div class="small text-white-50">
                                 Ph.D., Mechanical Engineering
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-body text-left">
+                        <div class="card-body text-left" style="background-color: #222;">
                             <h6>College of Engineering, Pune (CoEP)</h6>
                             <div class="small text-white-50">
                                 B.Tech., Mechanical Engineering
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-body text-left">
+                        <div class="card-body text-left" style="background-color: #222;">
                             <h6>Cusrow Wadia Institute of Technology</h6>
                             <div class="small text-white-50">
                                 Diploma in Engineering, Mechanical Engineering
