--- a/index.html
+++ b/index.html
@@ -214,6 +214,35 @@
             </div>
         </div>
     </section>
+    <section class="about-section text-center" id="pubs">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2 class="mb-4">Publications</h2>
+                    <div class="edu-item">
+                        <h3>van Beek, A., Karkaria, V. N., Chen, W.</h3>
+                        <h4>2022</h4>
+                        <p>“Digital Twins for the Designs of Systems: a Perspective”, Structural and Multidisciplinary Optimization, arXiv:2211.05040.</p>
+                    </div>
+                    <div class="edu-item">
+                        <h3>Jha, D., Karkaria, V. N., Karandikar, P. B., Desai, R. S.</h3>
+                        <h4>2022</h4>
+                        <p>“Statistical modeling of hybrid supercapacitor”, Journal of Energy Storage, vol. 46, pg. 103869, doi- <a href="https://doi.org/10.1016/j.est.2021.103869">https://doi.org/10.1016/j.est.2021.103869</a>.</p>
+                    </div>
+                    <div class="edu-item">
+                        <h3>Karkaria, V. N., Pradeep, K., Rohith Kumar, T., Karandikar, P. B., Mistree, F., Allen, J. K.</h3>
+                        <h4>2021</h4>
+                        <p>“Statistical Analysis Of Electrode-Electrolyteseparator To Improve Effectiveness Of Supercapacitor”, Turkish Journal of Computer and Mathematics Education (TURCOMAT), vol. 2, Issue. 14, Page. 1600.</p>
+                    </div>
+                    <div class="edu-item">
+                        <h3>Godse, L. S., Karkaria, V. N., Bhalerao, M. J., Karandikar, P. B.</h3>
+                        <h4>2021</h4>
+                        <p>“Forward Reverse Motion Multi-Cylinder Ball Milling Machine”, Mechanism and Machine Theory, vol. 163, pg. 104292, doi- <a href="https://doi.org/10.1016/j.mechmachtheory.2021.104292">https://doi.org/10.1016/j.mechmachtheory.2021.104292</a>.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <a href="https://scholar.google.com/citations?user=6ZxujUkAAAAJ&hl=en" target="_blank"><i class="fab fa-google"></i></a>
         <a href="https://www.linkedin.com/in/vispi-karkaria" target="_blank"><i class="fab fa-linkedin"></i></a>
