--- a/index.html
+++ b/index.html
@@ -214,6 +214,51 @@
             </div>
         </div>
     </section>
+    <section class="about-section text-center" id="projects">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2 class="mb-4">Projects</h2>
+                    <div class="edu-item">
+                        <h3>Development of a Tire Lifespan Predictive Algorithm via Random Forest</h3>
+                        <p><b>2021-2023</b></p>
+                        <p>Algorithms: Random Forest, Gaussian Process Models, Data Balancing Methods</p>
+                        <ul>
+                            <li>Conceived and developed a robust machine learning pipeline with a Random Forest model, leading to successful prediction of tire lifespan.</li>
+                            <li>Introduced the novel Variance Reduction Synthetic Minority Oversampling Technique (VR-SMOTE) for effective data balancing, yielding superior results over conventional and contemporary balancing methods.</li>
+                        </ul>
+                    </div>
+                    <div class="edu-item">
+                        <h3>Designing LSTM Model for Streamlining Additive Manufacturing Process</h3>
+                        <p><b>2022-2023</b></p>
+                        <p>Algorithms: LSTM, Deep Learning, Big Data</p>
+                        <ul>
+                            <li>Architected an LSTM-based machine learning model that acts as a surrogate for the Additive Manufacturing Process, delivering significant reduction in prediction time.</li>
+                            <li>Developed a comprehensive Big Data management system to efficiently handle the extensive data generated during the process.</li>
+                        </ul>
+                    </div>
+                    <div class="edu-item">
+                        <h3>Development of Latent-Variable Constrained Bayesian Optimization (LV-CBO)</h3>
+                        <p><b>2022-2023</b></p>
+                        <p>Algorithms: Mixed Variable Optimization, Gaussian Processes, PyTorch</p>
+                        <ul>
+                            <li>Engineered a Bayesian optimization algorithm incorporating Latent Variables that adeptly handles both continuous and categorical variables.</li>
+                            <li>The LV-CBO algorithm effectively tackled complex optimization challenges faced by Hyundai Motor Company.</li>
+                        </ul>
+                    </div>
+                    <div class="edu-item">
+                        <h3>Formulation of Machine Learning Model to Enhance the Lifespan of Super-Capacitors</h3>
+                        <p><b>2020-2023</b></p>
+                        <p>Algorithms: Deep Learning, Gaussian Processes, PyTorch</p>
+                        <ul>
+                            <li>Designed a deep learning algorithm capable of predicting current output under various configurations.</li>
+                            <li>Leveraged gradient-based optimization techniques to determine the most efficient super-capacitor design through a data-driven approach.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="about-section text-center" id="pubs">
         <div class="container">
             <div class="row">
