--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
         .edu-item h3, .edu-item h4 {
             margin-bottom: .5rem;
         }
+        #cv-summary {
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            padding: 20px;
+            align-items: center;
+            background: #222; /* Same as the background color of the section */
+        }
     </style>
 </head>
 <body>
@@ -140,25 +148,25 @@
         </div>
     </header>
     <section class="about-section text-center" id="about">
-    <div class="container">
-        <div class="row">
-            <div class="col my-0">
-                <div class="sticky-top" id="cv-summary">
-                    <img class="rounded-circle img-fluid" id="avatar" src="Personal_Photo.jpeg" />
-                    <h2>About Vispi</h2>
-                    <div class="men">
-                        <div>
-                            <a class="btn men-but" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1" role="button">Go to...</a>
-                            <div class="collapse text-uppercase" id="collapse-1">
-                                <p><a class="men-link js-scroll-trigger" href="#interests">Interests</a></p>
-                                <p><a class="men-link js-scroll-trigger" href="#edu">Education</a></p>
-                                <p><a class="men-link js-scroll-trigger" href="#awards">Awards</a></p>
-                                <p><a class="men-link js-scroll-trigger" href="#exp">Experience</a></p>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 my-0">
+                    <div class="sticky-top" id="cv-summary">
+                        <img class="rounded-circle img-fluid" id="avatar" src="Personal_Photo.jpeg" />
+                        <h2>About Vispi</h2>
+                        <div class="men">
+                            <div>
+                                <a class="btn men-but" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1" role="button">Go to...</a>
+                                <div class="collapse text-uppercase" id="collapse-1">
+                                    <p><a class="men-link js-scroll-trigger" href="#interests">Interests</a></p>
+                                    <p><a class="men-link js-scroll-trigger" href="#edu">Education</a></p>
+                                    <p><a class="men-link js-scroll-trigger" href="#awards">Awards</a></p>
+                                    <p><a class="men-link js-scroll-trigger" href="#exp">Experience</a></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
             <div class="col-lg-8 mx-auto" id="cv-main">
                 <p class="text-justify men-par">
                     As a Ph.D. student at Northwestern University, my focus is centered on the development and implementation of machine learning algorithms for Digital Twins. I'm deeply immersed in projects encompassing various fields such as time-series analysis, language models, deep learning, uncertainty quantification, and optimization. My proficiency lies in creating machine learning models specifically designed for time-series analysis and building optimization algorithms for real-time decision making.
