--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             color: #fff;
         }
         .masthead {
-            background: url('stream-binary-code-design-vector_53876-161364.avif') no-repeat center center;
+            background: url('78759.jpg') no-repeat center center;
             background-size: cover;
             height: 100%;
             text-align: center;
