--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
             align-items: center;
             background: #222; /* Same as the background color of the section */
         }
+        .divider {
+            position: absolute;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 2px; /* Adjust the width of the divider line */
+            background-color: blue; /* Color of the divider line */
+        }
     </style>
 </head>
 <body>
@@ -166,6 +174,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="divider"></div> <!-- Divider Line -->
                 </div>
                 <div class="col-lg-8 mx-auto" id="cv-main">
                     <p class="text-justify men-par">
