--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
             top: 0;
             bottom: 0;
             width: 2px; /* Adjust the width of the divider line */
-            background-color: blue; /* Color of the divider line */
+            background-color: lightblue; /* Light blue color for the divider line */
+            box-shadow: 0 0 10px lightblue; /* Glowing effect */
         }
     </style>
 </head>
