--- a/index.html
+++ b/index.html
@@ -274,19 +274,23 @@
                         <section class="about-section text-center" id="pubs">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-lg-14 mx-auto">
+                                    <div class="col-lg-12 mx-auto"> <!-- Changed col-lg-14 to col-lg-12 as Bootstrap grid supports up to 12 columns -->
                                         <h2 class="mb-4">Publications</h2>
                                         <div class="edu-item">
-                                            <p><b>van Beek, A., <span style="font-weight:bold;">Karkaria, V. N.</span>, Chen, W.</b> 2022. “Digital Twins for the Designs of Systems: a Perspective”, Structural and Multidisciplinary Optimization, arXiv:2211.05040.</p>
+                                            <p><b>“Digital Twins for the Designs of Systems: a Perspective”</b>, Structural and Multidisciplinary Optimization, <a href="https://arxiv.org/abs/2211.05040">arXiv:2211.05040</a>.</p>
+                                            <p><b>Authors:</b> van Beek, A., <span style="font-weight:bold;">Karkaria, V. N.</span>, Chen, W. </p>
                                         </div>
                                         <div class="edu-item">
-                                            <p><b>Jha, D., <span style="font-weight:bold;">Karkaria, V. N.</span>, Karandikar, P. B., Desai, R. S.</b> 2022. “Statistical modeling of hybrid supercapacitor”, Journal of Energy Storage, vol. 46, pg. 103869, doi- <a href="https://doi.org/10.1016/j.est.2021.103869">https://doi.org/10.1016/j.est.2021.103869</a>.</p>
+                                            <p><b>“Statistical modeling of hybrid supercapacitor”</b>, Journal of Energy Storage, vol. 46, pg. 103869, <a href="https://doi.org/10.1016/j.est.2021.103869">doi:10.1016/j.est.2021.103869</a>.</p>
+                                            <p><b>Authors:</b> Jha, D., <span style="font-weight:bold;">Karkaria, V. N.</span>, Karandikar, P. B., Desai, R. S.</p>
                                         </div>
                                         <div class="edu-item">
-                                            <p><b><span style="font-weight:bold;">Karkaria, V. N.</span>, Pradeep, K., Rohith Kumar, T., Karandikar, P. B., Mistree, F., Allen, J. K.</b> 2021. “Statistical Analysis Of Electrode-Electrolyteseparator To Improve Effectiveness Of Supercapacitor”, Turkish Journal of Computer and Mathematics Education (TURCOMAT), vol. 2, Issue. 14, Page. 1600.</p>
+                                            <p><b>“Statistical Analysis Of Electrode-Electrolyteseparator To Improve Effectiveness Of Supercapacitor”</b>, Turkish Journal of Computer and Mathematics Education (TURCOMAT), vol. 2, Issue. 14, Page. 1600.</p>
+                                            <p><b>Authors:</b> <span style="font-weight:bold;">Karkaria, V. N.</span>, Pradeep, K., Rohith Kumar, T., Karandikar, P. B., Mistree, F., Allen, J. K.</p>
                                         </div>
                                         <div class="edu-item">
-                                            <p><b>Godse, L. S., <span style="font-weight:bold;">Karkaria, V. N.</span>, Bhalerao, M. J., Karandikar, P. B.</b> 2021. “Forward Reverse Motion Multi-Cylinder Ball Milling Machine”, Mechanism and Machine Theory, vol. 163, pg. 104292, doi- <a href="https://doi.org/10.1016/j.mechmachtheory.2021.104292">https://doi.org/10.1016/j.mechmachtheory.2021.104292</a>.</p>
+                                            <p><b>“Forward Reverse Motion Multi-Cylinder Ball Milling Machine”</b>, Mechanism and Machine Theory, vol. 163, pg. 104292, <a href="https://doi.org/10.1016/j.mechmachtheory.2021.104292">doi:10.1016/j.mechmachtheory.2021.104292</a>.</p>
+                                            <p><b>Authors:</b> Godse, L. S., <span style="font-weight:bold;">Karkaria, V. N.</span>, Bhalerao, M. J., Karandikar, P. B.</p>
                                         </div>
                                     </div>
                                 </div>
