--- a/index.html
+++ b/index.html
@@ -296,6 +296,55 @@
                                 </div>
                             </div>
                         </section>
+                        <section class="about-section text-center" id="confPapers">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-12 mx-auto">
+                                        <h2 class="mb-4">Conference Papers</h2>
+                                        <div class="edu-item">
+                                            <h3><b>"A Computational Framework for Social Entrepreneurs to Determine Policies for Sustainable Development."</b></h3>
+                                            <p><b>Authors:</b> Karkaria, V., Das, A. K., Yadav, A., Sharma, A., Allen, J. K., Mistree, F.</p>
+                                            <p>Proceedings of the ASME 2021 International Design Engineering Technical Conferences and Computers and Information in Engineering Conference. Volume 3B: 47th Design Automation Conference (DAC). Virtual, Online. August 17–19, 2021. V03BT03A019. ASME. <a href="https://doi.org/10.1115/DETC2021-70827">https://doi.org/10.1115/DETC2021-70827</a>.</p>
+                                        </div>
+                                        <div class="edu-item">
+                                            <h3><b>"Investigation of substitute jar materials for Laboratory-grade ball milling machine to process electrode materials for energy storage devices"</b></h3>
+                                            <p><b>Authors:</b> Shinde, S., Momin, T., Karkaria, V. N., Karandikar, P. B.</p>
+                                            <p>IOP Conference Series, Material Science and Engineering, pp. 12018, vol. 1206, <a href="https://doi.org/10.1088/1757-899x/1206/1/012018">doi:10.1088/1757-899x/1206/1/012018</a>.</p>
+                                        </div>
+                                        <div class="edu-item">
+                                            <h3><b>"Electrode electrolyte compatibility for superior performance of super-capacitor"</b></h3>
+                                            <p><b>Authors:</b> Godse, L. S., Karkaria, V. N., Bhalerao, M. J., Khatua, S., Karandikar, P. B.</p>
+                                            <p>International Conference on Power Electronics Applications and Technology in Present Energy Scenario, PETPES 2019 – Proceedings, Institute of Electrical and Electronics Engineers Inc, pp. 1-5, <a href="https://doi.org/10.1109/PETPES47060.2019.9003864">doi:10.1109/PETPES47060.2019.9003864</a>.</p>
+                                        </div>
+                                        <div class="edu-item">
+                                            <h3><b>"Sizing the connectors for super-capacitors"</b></h3>
+                                            <p><b>Authors:</b> Karkaria, V. N., Godse, L. S., Bhalerao, M.J., Dalal, R.</p>
+                                            <p>2019, International Conference On Electrical, Communication, Electronics, Instrumentation And Computing, Kanchipuram, Tamil Nadu, India, pp. 1-7.</p>
+                                        </div>
+                                        <div class="edu-item">
+                                            <h3><b>"E-rickshaw present past and future with reference to current transportation in India"</b></h3>
+                                            <p><b>Authors:</b> Kokate, V. L., Bankar, D. S., Holmukhe, R. M., Karkaria, V. N., Karandikar, P. B.</p>
+                                            <p>International Conference on Recent Innovations in Electrical, Electronics & Communication Engineering - (ICRIEECE), volume-01(01), pp-1–15.</p>
+                                        </div>
+                                        <div class="edu-item">
+                                            <h3><b>"Review of technologies for making electric vehicles as main mode of transport"</b></h3>
+                                            <p><b>Authors:</b> Karkaria, V. N., Sarathchandran, V., Korgaonkar, P. R., Reddy, G. S. R., Mehta, S., Karandikar, P. B.</p>
+                                            <p>2018, International Conference On Advances in Communication and Computing Technology, ICACCT, Institute of Electrical and Electronics Engineers Inc, pp. 142–148, <a href="https://doi.org/10.1109/ICACCT.2018.8529591">doi:10.1109/ICACCT.2018.8529591</a>.</p>
+                                        </div>
+                                        <div class="edu-item">
+                                            <h3><b>"Thermal dicky"</b></h3>
+                                            <p><b>Authors:</b> Karkaria, V. N., Korgaonkar, P. R, Karandikar, P. B.</p>
+                                            <p>2017, Conference at Institute of Engineers, Pune, Maharashtra, India, pp. 90-96.</p>
+                                        </div>
+                                        <div class="edu-item">
+                                            <h3><b>"Innovative methods of ball milling to grind activated carbon as an electrode material for enhancing the performance of ultracapacitor"</b></h3>
+                                            <p><b>Authors:</b> Godse, L. S., Karkaria, V., Karandikar, P. B., Kulkarni, N. R.</p>
+                                            <p>International Conference on Energy, Communication, Data Analytics and Soft Computing, ICECDS 2017, pp. 2034–2041, Institute of Electrical and Electronics Engineers Inc, <a href="https://doi.org/10.1109/ICECDS.2017.8389807">doi:10.1109/ICECDS.2017.8389807</a>.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                 </div>
             </div>
         </div>
