--- a/index.html
+++ b/index.html
@@ -277,6 +277,12 @@
                                     <div class="col-lg-12 mx-auto"> <!-- Changed col-lg-14 to col-lg-12 as Bootstrap grid supports up to 12 columns -->
                                         <h2 class="mb-4">Publications</h2>
                                         <div class="edu-item">
+                                            <h3><b>"Digital Twins for the Designs of Systems: a Perspective"</b></h3>
+                                            <p><b>Authors:</b> van Beek, A., <span style="font-weight:bold;">Karkaria, V. N.</span>, Chen, W.</p>
+                                            <p>Structural and Multidisciplinary Optimization, <a href="https://arxiv.org/abs/2211.05040">arXiv:2211.05040</a>.</p>
+                                        </div>
+                            
+                                        <div class="edu-item">
                                             <p><b>“Digital Twins for the Designs of Systems: a Perspective”</b>, Structural and Multidisciplinary Optimization, <a href="https://arxiv.org/abs/2211.05040">arXiv:2211.05040</a>.</p>
                                             <p><b>Authors:</b> van Beek, A., <span style="font-weight:bold;">Karkaria, V. N.</span>, Chen, W. </p>
                                         </div>
